apps/ping-me/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ping-me
spec:
  selector:
    app: ping-me
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
