apps/ping-me/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-me
spec:
  ingressClassName: nginx
  rules:
    - host: ping-me.127.0.0.1.sslip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ping-me
                port:
                  number: 8080
