apps/ping-me/manifests/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress-controller
spec:
  podSelector:
    matchLabels:
      app: ping-me
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
      ports:
        - port: 8080
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
